infra/flask/test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    k8s-app: test-http
spec:
  containers:
  - name: mypod
    image: nginxdemos/hello:plain-text
